--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -44,7 +44,7 @@ jobs:
           # Report only issues of a given confidence level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
           confidence: HIGH # optional, default is UNDEFINED
           # comma-separated list of paths (glob patterns supported) to exclude from scan (note that these are in addition to the excluded paths provided in the config file) (default: .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg)
-          excluded_paths: "./testsuite,*/tests/*"  # testing to see if warnings are excluded
+          excluded_paths: "./testsuite,*/tests/*,*/testsuite/*,utils/test_generate_last_commit_file.py"  # testing to see if warnings are excluded
  # optional, default is DEFAULT
           # comma-separated list of test IDs to skip
           skips: B324,B110,B101 # optional, default is DEFAULT
