--- a/.github/workflows/security_dismissal.yml
+++ b/.github/workflows/security_dismissal.yml
@@ -14,38 +14,33 @@ jobs:
 
         steps:
      
-          
+
            - uses: actions/checkout@v4 # Checkout repository code
   
            - name: Install dependencies (if needed for parsing security tool response)
              run: |
                 # Add any package installation commands here (e.g., pip install requests)
                   sudo apt-get install jq  # Install jq for parsing JSON
-                 
+
            - name: Get Security Alerts
-           - uses: actions/github-script@v7
-            with:
-               script: |
-                // Your JavaScript code here
+           # use javascript and github api to get the alerts
+            # https://docs.github.com/en/rest/reference/code-scanning#list-code-scanning-alerts-for-a-repository
+            script: |
+              //use javascript to get the alerts
+              const core = require('@actions/core');
+              const github = require('@actions/github');
+              const octokit = github.getOctokit(core.getInput(${{ secrets.GITHUB_TOKEN }}));
+              const owner = github.context.repo.owner;
+              const repo = github.context.repo.repo;
 
-                // Octokit.js
-                // https://github.com/octokit/core.js#readme
-
-                const octokit = new Octokit({
-                  auth: ${{ secrets.GITHUB_TOKEN }}
-                })
-                
-                alerts = await octokit.request('GET /repos/csu-csc472-spring2024/grass-CI-playground/code-scanning/alerts?state=dismissed', {
-                  owner: 'csu-csc472-spring2024',
-                  repo: 'grass-CI-playground',
-                  headers: {
-                    'X-GitHub-Api-Version': '2022-11-28'
-                  }
-                })
-                // write the  alerts to a file
-                fs.writeFileSync('alerts.json', JSON.stringify(alerts, null, 2))
-                console.log('alerts retrieved successfully!')
-
+              const alerts = await octokit.request('GET /repos/{owner}/{repo}/code-scanning/alerts?state=dismissed', {
+                owner: owner,
+                repo: repo
+              });
+              console.log(alerts.data);
+              core.setOutput('alerts', JSON.stringify(alerts.data));
+              console.log('alerts retrieved successfully!');
+      
 
              #trigger a rerun
            - name: Upload the coding alerts as artifact
